Fix gap in Safari

--- a/style.scss
+++ b/style.scss
@@ -85,13 +85,12 @@ p {
   max-width: 80%;
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
 }
 
 .number-btn {
   width: 4rem;
   height: 4rem;
-  margin: 0;
+  margin: 0 2rem 2rem 0;
   padding: 0;
   border-radius: 4px;
   border: 2px solid #000;
